css: remove white-space: nowrap; to prevent table overflow
Before this commit, any table with long content
would extend beyond the viewport, resulting in lots of scrolling.

With this commit, we keep nowrap only in the file browser,
and only for columns after the first one (which contains
the full path and hence can get lengthy).

--- a/internal/assets/css/bull.css
+++ b/internal/assets/css/bull.css
@@ -148,6 +148,10 @@ main table tr:nth-child(even) {
     background-color: #eee;
 }
 
+.bull_gen_browse td:not(:first-child) {
+    white-space: nowrap;
+}
+
 .bull_gen_browse td a {
     display: inline-block;
     width: 100%;
@@ -186,7 +190,6 @@ main th {
 
 main th, main td {
     padding: .4rem;
-    white-space: nowrap;
 }
 
 main th {
